# proyecto-si784-2026-i-u1-analizador-de-secretos

./: .gitignore  FD-02-informe-vision  FD-04-ARQUITECTURA.md  FD01-Informe-Factibilidad.md  FD02-Informe de vision.md  README.md  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: FD-03-ESPECIFICACION-DISEÑO-SISTEMA.md  FD-04-ARQUITECTURA-SISTEMA.docx  FD02-Informe-Vision.md
tests/: test_reporter.py
