[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "secret-scanner"
version = "1.0.0"
description = "Herramienta CLI para detectar secretos expuestos en código fuente"
authors = [
    {name = "Kiara Zapana", email = "tu-correo@gmail.com"},
    {name = "Mauricio Choquea", email = "correo-mauricio@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["rich>=13.0.0"]

[project.scripts]
secret-scanner = "main:main"